local-demo/products-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products-api
  namespace: demo
spec:
  #replicas: 1 # remove this if using horizontal auto-scaling
  selector:
    matchLabels:
      app: products-api # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: products-api # has to match .spec.selector.matchLabels
      annotations:
        # dapr.io/enabled: "true"
        # dapr.io/app-id: "products-api"
        # dapr.io/app-port: "80"
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: products-api
        image: paulgilchrist/minimal-api:latest
        imagePullPolicy: Always
        livenessProbe: # Defines the health checking
          tcpSocket: # TCP probe
            port: 80
          initialDelaySeconds: 30 # length of time to wait for a pod to initialize after pod startup, before applying health checking
          timeoutSeconds: 1
        ports:
        - containerPort: 80
          name: products-api
        resources:
          limits:
            cpu: 500m
            memory: 1.5Gi
          requests:
            cpu: 250m
            memory: 0.5Gi
