local-demo/registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry # has to match .spec.template.metadata.labels
  template:
    metadata:
      labels:
        app: registry # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: registry
        image: paulgilchrist/swagger-ui:latest
        readinessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 15
        ports:
        - containerPort: 80
          name: registry
