local-demo/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database-service
  namespace: demo
spec:
  externalTrafficPolicy: Cluster
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: database
  type: LoadBalancer
