local-demo/web-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: demo
spec:
  ports:
    - port: 80
      name: http
    - port: 443
      name: https
  selector:
    app: web
  type: ClusterIP
