local-demo/contacts-api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contacts-api-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/cors-allow-methods: "DELETE, GET, OPTIONS, PATCH, POST, PUT"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "100"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: api.local.com
      http:
        paths:
        - path: /contacts/(.*)
          pathType: Prefix
          backend:
            service:
              name: contacts-api-service
              port:
                number: 80
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
      - api.local.com
      secretName: local-cert
